# GEDPaths

./: .gitignore  CMakeLists.txt  EXAMPLES.md  Experiments.md  INSTALLATION.md  README.md  analyze_edit_path_graphs.cpp  analyze_mappings.cpp  create_edit_mappings.cpp  create_edit_paths.cpp  create_edit_paths.h  experiment.sh  load_tu.h  main.cpp  test.cpp
Data/: .gitignore
cmake/: FindGUROBI.cmake
python_src/: data_loader.py  extract_gedlib_defaults.py  main.py  wl_analysis.py
python_src/converter/: GEDPathsInMemory.py  bgf_to_pt.py  test_bgf_to_pt.py  test_load_pt.py  torch_geometric_exporter.py
python_src/visualization/: plot_edit_path.py  plot_edit_path_stats.py  plot_graph.py  test_plot_edit_path.py  visualization_functions.py
src/: analyze_edit_path_graphs.h  analyze_mappings.h  create_edit_mappings.h  create_edit_paths.h  include.h
